# OS_2025_CIIC4050

./: README.md
Lab1/exercise1/: CMakeLists.txt
Lab1/exercise1/include/: functions.h
Lab1/exercise1/src/: functions.c  main.c
Lab1/exercise2/: CMakeLists.txt
Lab1/exercise2/src/: functions.c  main.c
Labs/Lab1/exercise1/include/: functions.h
Labs/Lab1/exercise1/src/: functions.c  main.c
Labs/Lab1/exercise2/include/: functions.h
Labs/Lab1/exercise2/src/: functions.c  main.c
Labs/Lab1/exercise3/: CMakeLists.txt
Labs/Lab1/exercise3/include/: functions.h
Labs/Lab1/exercise3/src/: functions.c  main.c
Labs/Lab1/exercise4/: CMakeLists.txt
Labs/Lab1/exercise4/include/: functions.h
Labs/Lab1/exercise4/src/: functions.c  main.c
Labs/Lab1/lab_exercise/: CMakeLists.txt
Labs/Lab1/lab_exercise/include/: functions.h
Labs/Lab1/lab_exercise/src/: functions.c  main.c
Labs/Lab2/: CMakeLists.txt
Labs/Lab2/exercise1/: CMakeLists.txt
Labs/Lab2/exercise1/src/: main.c
Labs/Lab2/exercise1/word_explorer/test_files/: file1.txt  file2.txt  file3.txt  file4.txt  file5.txt  file_not_1.txt  file_not_2.txt  file_not_3.txt
Labs/Lab2/exercise1/word_explorer/word_explorer/: CMakeLists.txt
Labs/Lab2/exercise1/word_explorer/word_explorer/include/: functions.h
Labs/Lab2/exercise1/word_explorer/word_explorer/src/: functions.c  main.c
Labs/Lab2/exercise2/processA/: CMakeLists.txt
Labs/Lab2/exercise2/processA/include/: functions.h
Labs/Lab2/exercise2/processA/src/: functions.c  main.c
Labs/Lab2/exercise2/processB/: CMakeLists.txt
Labs/Lab2/exercise2/processB/include/: functions.h
Labs/Lab2/exercise2/processB/src/: functions.c  main.c
Labs/Lab3/: CMakeLists.txt
Labs/Lab3.2/: CMakeLists.txt
Labs/Lab3.2/include/: functions.h
Labs/Lab3.2/src/: functions.c  main.c
Labs/Lab3/include/: functions.h
Labs/Lab3/src/: functions.c  main.c
Project/: conclusion.txt  path_1.txt  path_2.txt
Project/posix_timer/: CMakeLists.txt  timer_log.txt
Project/posix_timer/include/: functions.h
Project/posix_timer/src/: functions.c  main.c
Project/thread_usleep/: CMakeLists.txt  thread_log.txt
Project/thread_usleep/include/: functions.h
Project/thread_usleep/src/: functions.c  main.c
